--- a/Resources/Styles/ThemeDark.xaml
+++ b/Resources/Styles/ThemeDark.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                    x:Class="Zinote.Resources.Styles.ThemeDark">
     
     <Color x:Key="DynamicPageBackground">#121212</Color>
     <Color x:Key="DynamicCardBackground">#1E1E1E</Color>
@@ -10,6 +11,29 @@
     <Color x:Key="DynamicAccent">#3399FF</Color>
     <Color x:Key="DynamicBorder">#404040</Color>
     <Color x:Key="DynamicDangerBackground">#3E2020</Color>
+    
+    <!-- Export UI Colors -->
+    <Color x:Key="DynamicOverlayBackground">#B3000000</Color>
+    <Color x:Key="DynamicExportBasicBg">#424242</Color>
+    <Color x:Key="DynamicExportBasicText">#FFFFFF</Color>
+    <Color x:Key="DynamicExportMatecatBg">#013F66</Color>
+    <Color x:Key="DynamicExportMatecatText">#81D4FA</Color>
+    <Color x:Key="DynamicExportSmartcatBg">#5D2D00</Color>
+    <Color x:Key="DynamicExportSmartcatText">#FFCC80</Color>
+    <Color x:Key="DynamicCloseButtonBg">#B71C1C</Color>
+    
+    <!-- Action Colors -->
+    <Color x:Key="DynamicSuccessButtonBg">#66BB6A</Color>
+    <Color x:Key="DynamicDeleteButtonText">#EF9A9A</Color>
+    
+    <!-- Component Colors (replacing static styles) -->
+    <Color x:Key="DynamicShellBackground">#141414</Color>
+    <Color x:Key="DynamicShellTitleColor">#FFFFFF</Color>
+    <Color x:Key="DynamicButtonBackground">#3399FF</Color>
+    <Color x:Key="DynamicButtonText">#FFFFFF</Color>
+    <Color x:Key="DynamicActivityIndicatorColor">#FFFFFF</Color>
+    <Color x:Key="DynamicShellTabBarBackground">#000000</Color>
+    <Color x:Key="DynamicShellTabBarTitleColor">#FFFFFF</Color>
     
     <!-- Theme Icon -->
     <x:String x:Key="DynamicThemeIcon">☀️</x:String>
