--- a/Resources/Styles/ThemeLight.xaml
+++ b/Resources/Styles/ThemeLight.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                    x:Class="Zinote.Resources.Styles.ThemeLight">
     
     <Color x:Key="DynamicPageBackground">#F5F5F5</Color>
     <Color x:Key="DynamicCardBackground">White</Color>
@@ -10,6 +11,29 @@
     <Color x:Key="DynamicAccent">#007ACC</Color>
     <Color x:Key="DynamicBorder">#E0E0E0</Color>
     <Color x:Key="DynamicDangerBackground">#FFEBEE</Color>
+    
+    <!-- Export UI Colors -->
+    <Color x:Key="DynamicOverlayBackground">#99000000</Color>
+    <Color x:Key="DynamicExportBasicBg">#F0F0F0</Color>
+    <Color x:Key="DynamicExportBasicText">#000000</Color>
+    <Color x:Key="DynamicExportMatecatBg">#E1F5FE</Color>
+    <Color x:Key="DynamicExportMatecatText">#0277BD</Color>
+    <Color x:Key="DynamicExportSmartcatBg">#FFF3E0</Color>
+    <Color x:Key="DynamicExportSmartcatText">#EF6C00</Color>
+    <Color x:Key="DynamicCloseButtonBg">#D32F2F</Color>
+    
+    <!-- Action Colors -->
+    <Color x:Key="DynamicSuccessButtonBg">#4CAF50</Color>
+    <Color x:Key="DynamicDeleteButtonText">#EF5350</Color>
+    
+    <!-- Component Colors (replacing static styles) -->
+    <Color x:Key="DynamicShellBackground">#007ACC</Color>
+    <Color x:Key="DynamicShellTitleColor">#FFFFFF</Color>
+    <Color x:Key="DynamicButtonBackground">#007ACC</Color>
+    <Color x:Key="DynamicButtonText">#FFFFFF</Color>
+    <Color x:Key="DynamicActivityIndicatorColor">#007ACC</Color>
+    <Color x:Key="DynamicShellTabBarBackground">#FFFFFF</Color>
+    <Color x:Key="DynamicShellTabBarTitleColor">#007ACC</Color>
     
     <!-- Theme Icon -->
     <x:String x:Key="DynamicThemeIcon">🌙</x:String>
