--- a/Resources/Styles/ThemeDark.xaml
+++ b/Resources/Styles/ThemeDark.xaml
@@ -34,6 +34,7 @@
     <Color x:Key="DynamicActivityIndicatorColor">#FFFFFF</Color>
     <Color x:Key="DynamicShellTabBarBackground">#000000</Color>
     <Color x:Key="DynamicShellTabBarTitleColor">#FFFFFF</Color>
+    <Color x:Key="DynamicHeaderButtonBg">#33FFFFFF</Color>
     
     <!-- Theme Icon -->
     <x:String x:Key="DynamicThemeIcon">☀️</x:String>
